# ChangeLog for net-misc/openrdate
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openrdate/ChangeLog,v 1.1 2008/06/18 21:55:25 robbat2 Exp $

*openrdate-1.1.3 (18 Jun 2008)

  18 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/openrdate-1.1.3-rename.patch, +files/openrdate-confd,
  +files/openrdate-initd, +metadata.xml, +openrdate-1.1.3.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
