@@ -2,6 +2,8 @@ AUX openrdate-1.1.3-rename.patch 670 RMD160 48970f24339c19c7d89bc60730214a5ffc1a
 AUX openrdate-confd 583 RMD160 36b9dea01ad9214e973128418bb7f993647691f0 SHA1 27a73ed24946fe84b3086547dc4e68d75084c289 SHA256 530a3c700359d7fee40b7ea1707650929c5e2ba230f81a00cb4233ea34f11b27
 AUX openrdate-initd 650 RMD160 a5c4fdfddd5c23dabe30b446d41e2fe9dccf501f SHA1 512ba6d1a2883fc7be7e9f3d0dd5118c426f7fa8 SHA256 07577b36ccc71ea23a7a8cd4cb649db1f051ae48b5493d24c9ba75c1a3e8fc13
 DIST openrdate-1.1.3.tar.gz 92841 RMD160 64f69ab5901b53fa591903983d8f50aa7a3de626 SHA1 15c3a4a24ee989c836f2683b55fd6a585f1e52ab SHA256 0f8a034107fc7593f28e77b276f964c1309343b4702ecdf0d61bb3e57ad0cb5f
+DIST openrdate-1.2.tar.gz 118030 RMD160 e05259c6133037d34c1e2f8d1bdf3107d9a8a738 SHA1 9c54bbdbcaa71bc06e967b9ceda2b2e9291b1531 SHA256 2921fc96d4ca676190d6ffd45fa80e107c1fe12291c0c4f64827c29639863332
 EBUILD openrdate-1.1.3.ebuild 834 RMD160 bde2ff4278d6f1bb35e7f22f24d7f3b1d6925104 SHA1 53303e59c0a254383f2c9b7a772ca6d85a86da82 SHA256 87c8a0a1285fd6f3b50320d87144687fa8f4103861c4c70a420185b4c38ca2c6
-MISC ChangeLog 492 RMD160 f6fe749ee9f1e873e543de7804f0313acf272322 SHA1 08c12a78948577776ae7e1a95dc305ce7bd64fea SHA256 2238efae8b92038f1b2ad80fb2c305b3730e95fed847475ec5280e1ed19b32ef
+EBUILD openrdate-1.2.ebuild 832 RMD160 963b62adeaf0e8b9a54ba1fe68bed5ded00fdf26 SHA1 540cd86fd6a0ceca39454a49d2a406b8ae78416e SHA256 16b9acb6adc9c1a250667a089d17cd7d4ec74f9ad82ff9d3cce8f3f0d7ea6672
+MISC ChangeLog 628 RMD160 f721254d9e2a0bce0562807294717803d17d5d6e SHA1 8596557133a8c62a0b9907205d2a4431dfbf3290 SHA256 95c636f690ecfed1f863538e624b591619260b8993e8a774d58151d5fb75130c
 MISC metadata.xml 223 RMD160 ffa99612cf27469c417944deed0e0c9155e64331 SHA1 607c637402dd253406aa6ee684471a702c5d1a99 SHA256 d6bb9ba68629616062b4433ab3b8fb01dfcafae5bb47804d9e06cdd6c66daa44
