@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/openrdate
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openrdate/ChangeLog,v 1.1 2008/06/18 21:55:25 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openrdate/ChangeLog,v 1.2 2008/11/27 10:51:26 robbat2 Exp $
+
+*openrdate-1.2 (27 Nov 2008)
+
+  27 Nov 2008; Robin H. Johnson <robbat2@gentoo.org> +openrdate-1.2.ebuild:
+  Bug #248887, version bump.
 
 *openrdate-1.1.3 (18 Jun 2008)
 
